# stack-up

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  demo_mcp_server.py  pyproject.toml  register_mcp_server.py
.github/ISSUE_TEMPLATE/: design-proposal.md
R1/: README.md  pyproject.toml
R1/api/: __init__.py
R1/api/v1/: ingest.py  router.py
R1/app/: __init__.py
R1/app/ingestion/: __init__.py  detector.py  exceptions.py  models.py
R1/tests/: __init__.py
R1/tests/ingestion/: __init__.py  test_detector.py  test_ingest_endpoint.py
R3/: __init__.py  endpoints.py  generator.py  parser.py
demo/: demo_local.py
nasiko/: docker-compose.local.yml
nasiko/api/: ingest.py
nasiko/api/v1/: ingest.py
nasiko/app/: agent_builder.py  redis_stream_listener.py
nasiko/app/ingestion/: detector.py  endpoint.py
nasiko/app/utils/: agent_mcp_linker.py  mcp_tools.py  orchestrate_state.py
nasiko/app/utils/mcp_manifest_generator/: endpoints.py  generator.py  parser.py
nasiko/app/utils/observability/: __init__.py  mcp_tracing.py
nasiko/mcp_bridge/: __init__.py  kong.py  server.py
tests/bridge/: test_bridge_server.py
tests/integration/: test_full_pipeline.py  test_mcp_e2e.py
tests/observability/: test_mcp_tracing.py
tests/orchestration/: test_mcp_linker.py
tests/track1/: __init__.py  test_track1_integration.py
