[tool.poetry]
name = "nasiko-r1-ingestion"
version = "1.0.0"
description = "R1 Upload & Artifact Detection for Nasiko MCP Hackathon"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104"
pydantic = {extras = ["email"], version = "^2.5"}
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "app"

[[tool.poetry.packages]]
include = "api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
